reports/chapter-8.log
Traceback (most recent call last):
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
    import schemdraw
    import schemdraw.elements as elm
    with schemdraw.Drawing(file='nodal-example-3.svg') as d:
    d.push()
    d += elm.GroundSignal()
    d.pop()
    d += (R1 := elm.ResistorIEC().up().label('$R_1$'))
    d += elm.CurrentLabelInline(direction='out', ofst=-0.6).at(R1.start).label('$I_a$')
    d += (A := elm.Dot().label('A', loc='left'))
    d += (R2 := elm.ResistorIEC().right().label('$R_2$'))
    d += elm.CurrentLabelInline(direction='in', ofst=0.3).at(R2.end).label('$I_b$')
    d += (B := elm.Dot().label('B'))
    d += (R3 := elm.ResistorIEC().right().label('$R_3$'))
    d += elm.CurrentLabelInline(direction='out', ofst=-0.6).at(R3.start).label('$I_c$')
    d += (C := elm.Dot().label('C', loc='right'))
    d += (R4 := elm.ResistorIEC().down().label('$R_4$'))
    d += elm.CurrentLabelInline(direction='in', ofst=0.3).at(R4.end).label('$I_d$')
    d += elm.Line().left()
    d.push()
    d += (R5 := elm.ResistorIEC().up().label('$R_5$'))
    d += elm.CurrentLabelInline(direction='out', ofst=-0.6).at(R5.start).label('$I_e$')
    d.pop()
    d += elm.Line().left()
    d.move_from(A.end, 0, 0)
    d += elm.Line().up()
    d += (R6 := elm.ResistorIEC().right().label('$R_6$').length(6))
    d += elm.CurrentLabelInline(direction='in', ofst=1.5).at(R6.end).label('$I_f$')
d += elm.Line().down()
------------------

[0;36m  File [0;32m"/var/folders/65/qy_bbqpj2x3470cgr0fmhyc40000gn/T/ipykernel_90001/2181870217.py"[0;36m, line [0;32m4[0m
[0;31m    d.push()[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block

IndentationError: expected an indented block (2181870217.py, line 4)

